crates/obzenflow_core/tests/compile_fail/effect_outcome_unit_variant.stderr
error: effect outcome enum variants must each hold exactly one TypedPayload fact, e.g. `Authorized(PaymentAuthorized)`; unit, struct-like, multi-field, and empty enums are not valid carriers (FLOWIP-120m)
  --> tests/compile_fail/effect_outcome_unit_variant.rs:18:5
   |
18 |     Nothing,
   |     ^^^^^^^
